2011-11-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* transmitter.crt: [Bug 3433470] Regenerated the certificates.
	* transmitter.key: Expiry is Nov 2012. SimpleCA doesn't seem
	* receiver.crt: to allow me to specify a longer period. :(
	* receiver.key: Updated README.
	* ca.crt:
	* ca.key:
	* README:

2011-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added new constraint to identify core version
	  upto Tcl 8.5, but not higher.

2011-01-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl (useTcllibC): Account for the possibility of
	  the environment providing a tcllibc, instead of a Tcllib local
	  one.

2011-01-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl (snitTooManyArgs): Fixed error messages for
	  snit 1.x series.

2010-09-15  Andreas Kupries  <andreask@activestate.com>

	* testutilities.tcl: [Bug 3066026]: Moved the tcltest
	compatibility initialization into a procedure (InitializeTcltest)
	which is called by testNeedsTcltest and a few other places to be
	done only after we are sure that the tcltest package is present.

2010-03-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added constraint for 8.4-.

2009-09-24  Andreas Kupries  <andreask@activestate.com>

	* testutilities.tcl: Added constraint for 8.6+.

2009-04-13  Andreas Kupries  <andreask@activestate.com>

	* dialog.tcl: Extended to allow dialog over a socket secured by
	  SSL (via package tls).

2009-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ca.crt: New files, SSL/TLS certificates for use in testsuites.
	* ca.key: ca.* = Tcllib Certification Authority
	* ca.key.password: Receiver, Transmitter = Certificates for two
	* receiver.crt: sides of a communication channel.
	* receiver.key:
	* transmitter.crt:
	* transmitter.key:

	* README: Acknowledgement added for the SimpleCA software used to